--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,13 @@
 <h1>
   List of all movies
 </h1>
-
+<h2>
+  <%= root_url%>
+</h2>
 <hr>
 
 <div>
-  <a href="/movies/new">Add a new movie</a>
+  <a href="<%= new_movie_path %>">Add a new movie</a>
 </div>
 
 <hr>
@@ -58,7 +60,7 @@
     </td>
 
     <td>
-      <a href="/movies/<%= a_movie.id %>">
+      <a href="<%= movie_path(a_movie.id) %>">
         Show details
       </a>
     </td>
