--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Movie #<%= @the_movie.id %> details
+      Movie #<%= @movie.id %> details
     </h1>
 
     <div>
@@ -10,16 +10,16 @@
       </div>
 
       <div>
-        <a href="<%= edit_movie_path(@the_movie) %>">
+        <a href="<%= edit_movie_path(@movie) %>">
           Edit movie
         </a>
       </div>
 
       <div>
-        <a href="<%= movie_path(@the_movie) %>" data-turbo-method="delete">
+        <a href="<%= movie_path(@movie) %>" data-turbo-method="delete">
           Delete movie
         </a>
-        <%# <%= link_to "Delete movie", movie_path(@the_movie)%> %>
+        <%# <%= link_to "Delete movie", movie_path(@movie)%> 
       </div>
     </div>
 
@@ -28,28 +28,28 @@
         Title
       </dt>
       <dd>
-        <%= @the_movie.title %>
+        <%= @movie.title %>
       </dd>
 
       <dt>
         Description
       </dt>
       <dd>
-        <%= @the_movie.description %>
+        <%= @movie.description %>
       </dd>
 
       <dt>
         Created at
       </dt>
       <dd>
-        <%= time_ago_in_words(@the_movie.created_at) %> ago
+        <%= time_ago_in_words(@movie.created_at) %> ago
       </dd>
 
       <dt>
         Updated at
       </dt>
       <dd>
-        <%= time_ago_in_words(@the_movie.updated_at) %> ago
+        <%= time_ago_in_words(@movie.updated_at) %> ago
       </dd>
     </dl>
   </div>
