--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -7,6 +7,20 @@
 <%= form_with(url: movies_path) do%>
   <div>
     <%= label_tag :title%>
+    <%= text_field_tag "movie[title]", @movie.title, {id: "title"}%>
+  </div>
+
+  <div>
+    <%= label_tag :description%>
+    <%= text_area_tag "movie[description]", @movie.description, {id: "description", rows: "3"}%>
+  </div>
+
+  <%= button_tag "Create Movie" %>
+<%end%>
+
+<%= form_with(url: movies_path) do%>
+  <div>
+    <%= label_tag :title%>
     <%= text_field_tag :title, @movie.title, {id: "title"}%>
   </div>
 
